Refactoring/1171 naming cleanup rebase (#1263)
* squash branch

* regen package-lock

* fix after rebase

* apply formatter

* implement reveiw

* update hostName and subDomain