@@ -14,6 +14,7 @@ import java.util.Arrays;
 import java.util.List;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -40,53 +41,56 @@ class UserBusinessServiceTest {
         User userAlice = User.Builder
                 .builder() //
                 .withId(2L) //
-                .withFirstname("Alice") //
-                .withLastname("Wunderland") //
+                .withFirstName("Alice") //
+                .withLastName("Wunderland") //
                 .withEmail("wunderland@puzzle.ch") //
                 .build();
 
         User userBob = User.Builder
                 .builder() //
                 .withId(9L) //
-                .withFirstname("Bob") //
-                .withLastname("Baumeister") //
+                .withFirstName("Bob") //
+                .withLastName("Baumeister") //
                 .withEmail("baumeister@puzzle.ch") //
                 .build();
 
         userList = Arrays.asList(userAlice, userBob);
     }
 
+    @DisplayName("Should return correct list of all users on getAllUsers()")
     @Test
-    void shouldReturnAllUsersCorrect() throws ResponseStatusException {
+    void shouldReturnAllUsersCorrectly() throws ResponseStatusException {
         Mockito.when(userPersistenceService.findAll()).thenReturn(userList);
 
         List<User> userList = userBusinessService.getAllUsers();
 
         Assertions.assertThat(userList.size()).isEqualTo(2);
         Assertions.assertThat(userList.getFirst().getId()).isEqualTo(2);
-        Assertions.assertThat(userList.getFirst().getFirstname()).isEqualTo("Alice");
-        Assertions.assertThat(userList.get(0).getLastname()).isEqualTo("Wunderland");
+        Assertions.assertThat(userList.getFirst().getFirstName()).isEqualTo("Alice");
+        Assertions.assertThat(userList.get(0).getLastName()).isEqualTo("Wunderland");
         Assertions.assertThat(userList.get(0).getEmail()).isEqualTo("wunderland@puzzle.ch");
         Assertions.assertThat(userList.get(1).getId()).isEqualTo(9);
-        Assertions.assertThat(userList.get(1).getFirstname()).isEqualTo("Bob");
-        Assertions.assertThat(userList.get(1).getLastname()).isEqualTo("Baumeister");
+        Assertions.assertThat(userList.get(1).getFirstName()).isEqualTo("Bob");
+        Assertions.assertThat(userList.get(1).getLastName()).isEqualTo("Baumeister");
         Assertions.assertThat(userList.get(1).getEmail()).isEqualTo("baumeister@puzzle.ch");
     }
 
+    @DisplayName("Should return empty list of users on getAllUsers() when there are no users")
     @Test
-    void shouldReturnEmptyUsers() throws ResponseStatusException {
+    void shouldReturnEmptyListOfUsers() throws ResponseStatusException {
         List<User> userList = userBusinessService.getAllUsers();
 
         Assertions.assertThat(userList.size()).isEqualTo(0);
     }
 
+    @DisplayName("Should return correct user on getUserById()")
     @Test
-    void shouldReturnSingleUserWhenFindingOwnerByValidId() {
+    void shouldReturnSingleUserWhenUserFoundUsingGetUserById() {
         User owner = User.Builder
                 .builder()
                 .withId(1L)
-                .withFirstname("Bob")
-                .withLastname("Kaufmann")
+                .withFirstName("Bob")
+                .withLastName("Kaufmann")
                 .withEmail("kaufmann@puzzle.ch")
                 .build();
         Mockito.when(userPersistenceService.findById(any())).thenReturn(owner);
@@ -94,18 +98,19 @@ class UserBusinessServiceTest {
         User returnedUser = userBusinessService.getUserById(1L);
 
         assertEquals(1L, returnedUser.getId());
-        assertEquals("Bob", returnedUser.getFirstname());
-        assertEquals("Kaufmann", returnedUser.getLastname());
+        assertEquals("Bob", returnedUser.getFirstName());
+        assertEquals("Kaufmann", returnedUser.getLastName());
         assertEquals("kaufmann@puzzle.ch", returnedUser.getEmail());
     }
 
+    @DisplayName("Should return user on getOrCreateUser() when user already exists")
     @Test
-    void getOrCreateUserShouldReturnSingleUserWhenUserFound() {
+    void shouldReturnSingleUserWhenUserFoundUsingGetOrCreateUser() {
         User newUser = User.Builder
                 .builder()
                 .withId(1L)
-                .withFirstname("Bob")
-                .withLastname("Kaufmann")
+                .withFirstName("Bob")
+                .withLastName("Kaufmann")
                 .withEmail("kaufmann@puzzle.ch")
                 .build();
         Mockito.when(userPersistenceService.getOrCreateUser(any())).thenReturn(newUser);
@@ -113,18 +118,19 @@ class UserBusinessServiceTest {
         User returnedUser = userBusinessService.getOrCreateUser(newUser);
 
         assertEquals(1L, returnedUser.getId());
-        assertEquals("Bob", returnedUser.getFirstname());
-        assertEquals("Kaufmann", returnedUser.getLastname());
+        assertEquals("Bob", returnedUser.getFirstName());
+        assertEquals("Kaufmann", returnedUser.getLastName());
         assertEquals("kaufmann@puzzle.ch", returnedUser.getEmail());
     }
 
+    @DisplayName("Should create new user on getOrCreateUser() when user does not already exist")
     @Test
-    void getOrCreateUserShouldReturnSavedUserWhenUserNotFound() {
+    void shouldReturnSavedUserWhenUserNotFoundUsingGetOrCreateUser() {
         User newUser = User.Builder
                 .builder()
                 .withId(1L)
-                .withFirstname("Bob")
-                .withLastname("Kaufmann")
+                .withFirstName("Bob")
+                .withLastName("Kaufmann")
                 .withEmail("kaufmann@puzzle.ch")
                 .build();
         Mockito.when(userPersistenceService.getOrCreateUser(newUser)).thenReturn(newUser);
@@ -132,18 +138,19 @@ class UserBusinessServiceTest {
         User returnedUser = userBusinessService.getOrCreateUser(newUser);
 
         assertEquals(1L, returnedUser.getId());
-        assertEquals("Bob", returnedUser.getFirstname());
-        assertEquals("Kaufmann", returnedUser.getLastname());
+        assertEquals("Bob", returnedUser.getFirstName());
+        assertEquals("Kaufmann", returnedUser.getLastName());
         assertEquals("kaufmann@puzzle.ch", returnedUser.getEmail());
     }
 
+    @DisplayName("Should throw exception on getOrCreateUser() when user is invalid")
     @Test
-    void getOrCreateUserShouldThrowResponseStatusExceptionWhenInvalidUser() {
+    void shouldThrowResponseStatusExceptionWhenInvalidUserUsingGetOrCreateUser() {
         User newUser = User.Builder
                 .builder()
                 .withId(1L)
-                .withFirstname("Bob")
-                .withLastname("Kaufmann")
+                .withFirstName("Bob")
+                .withLastName("Kaufmann")
                 .withEmail("kaufmann@puzzle.ch")
                 .build();
         Mockito
@@ -158,8 +165,9 @@ class UserBusinessServiceTest {
         assertEquals("Not allowed to give an id", exception.getReason());
     }
 
+    @DisplayName("Should set user to okr champion on setIsOkrChampion()")
     @Test
-    void setOkrChampion_shouldSetOkrChampionCorrectly() {
+    void shouldSetOkrChampionCorrectly() {
         var user = TestHelper.defaultUser(1L);
         user.setOkrChampion(false);
 
@@ -169,8 +177,9 @@ class UserBusinessServiceTest {
         assertTrue(user.isOkrChampion());
     }
 
+    @DisplayName("Should throw exception on setIsOkrChampion() when the last okr champion is removed")
     @Test
-    void setOkrChampion_shouldThrowExceptionIfLastOkrChampIsRemoved() {
+    void shouldThrowExceptionIfLastOkrChampionIsRemovedUsingSetIsOkrChampion() {
         var user = TestHelper.defaultUser(1L);
         var user2 = TestHelper.defaultUser(2L);
         user.setOkrChampion(true);
@@ -179,8 +188,9 @@ class UserBusinessServiceTest {
         assertThrows(OkrResponseStatusException.class, () -> userBusinessService.setIsOkrChampion(user, false));
     }
 
+    @DisplayName("Should not throw exception on setIsOkrChampion() when removing the second to last okr champion")
     @Test
-    void setOkrChampion_shouldNotThrowExceptionIfSecondLastOkrChampIsRemoved() {
+    void shouldNotThrowExceptionIfPenultimateOkrChampionIsRemovedUsingSetOkrChampion() {
         var user = TestHelper.defaultUser(1L);
         var user2 = TestHelper.defaultUser(2L);
         user.setOkrChampion(true);
@@ -193,6 +203,7 @@ class UserBusinessServiceTest {
         assertFalse(user.isOkrChampion());
     }
 
+    @DisplayName("Should delete user on deleteEntityById()")
     @Test
     void shouldDeleteUser() {
         userBusinessService.deleteEntityById(23L);
